# SO_assignment

./: .gitignore  CMakeLists.txt  README.md  questions.json
client/: main.cpp
client/src/: player.h
server/: main.cpp
server/src/: game.h  phases.h
types/: classification.h  connection.h  game_state.h  message.h  registration.h  registration_type.h  shared_resource.h  signal.h  thread_safe_variable.h
types/question/: question.h  question_awnser.h  question_view.h
utils/: shared_memory.h
